hphp/hack/test/typecheck/reactive/rx_if_implements16.php.exp
File "rx_if_implements16.php", line 13, characters 12-28:
Conditionally reactive method with condition type '\Rx2' cannot be called (Typing[4225])
File "rx_if_implements16.php", line 17, characters 28-35:
Calling such methods is allowed only from conditionally reactive methods with the same condition type or if static type of method receiver is a subtype of condition type, now '\A'.
